# openQDC

./: .gitignore  .pre-commit-config.yaml  .project-root  CNAME  LICENSE  README.md  env.yml  mkdocs.yml  pyproject.toml  pytest.ini  versions.json
.github/: CODEOWNERS  SECURITY.md
.github/workflows/: code-check.yml  doc.yml  pre-commit-ci.yml  release.yml  test.yml
0.1.0/: 404.html  cli.html  contribute.html  data_storage.html  dataset_upload.html  datasets.html  index.html  licensing.html  normalization_e0s.html  objects.inv  sitemap.xml  usage.html
0.1.0/API/: basedataset.html  formats.html  methods.html  regressor.html  units.html  utils.html
0.1.0/API/datasets/: alchemy.html  ani.html  comp6.html  des.html  gdml.html  geom.html  iso_17.html  l7.html  md22.html  metcalf.html  molecule3d.html  multixcqm9.html  nabladft.html  orbnet_denali.html  pcqm.html  proteinfragments.html  qm1b.html  qm7x.html  qmugs.html  qmx.html  revmd17.html  sn2_rxn.html  solvated_peptides.html  spice.html  splinter.html  tmqm.html  transition1x.html  vqm24.html  waterclusters.html  waterclusters3_30.html  x40.html
0.1.0/search/: search_index.json
0.1.0/tutorials/: usage.html
0.1.1/: 404.html  cli.html  contribute.html  data_storage.html  dataset_upload.html  datasets.html  index.html  licensing.html  normalization_e0s.html  sitemap.xml  usage.html
0.1.1/API/: basedataset.html  e0_dispatcher.html  formats.html  methods.html  properties.html  regressor.html  statistics.html  units.html  utils.html
0.1.1/API/datasets/: alchemy.html  ani.html  comp6.html  des.html  gdml.html  geom.html  iso_17.html  l7.html  md22.html  metcalf.html  molecule3d.html  multixcqm9.html  nabladft.html  orbnet_denali.html  pcqm.html  proteinfragments.html  qm1b.html  qm7x.html  qmugs.html  qmx.html  revmd17.html  sn2_rxn.html  solvated_peptides.html  spice.html  splinter.html  tmqm.html  transition1x.html  vqm24.html  waterclusters.html  waterclusters3_30.html  x40.html
0.1.1/tutorials/: usage.html
0.1.2/: 404.html  cli.html  contribute.html  data_storage.html  dataset_upload.html  datasets.html  index.html  licensing.html  normalization_e0s.html  objects.inv  sitemap.xml  usage.html
0.1.2/API/: basedataset.html  e0_dispatcher.html  formats.html  methods.html  properties.html  regressor.html  statistics.html  units.html  utils.html
0.1.2/API/datasets/: alchemy.html  ani.html  comp6.html  des.html  gdml.html  geom.html  iso_17.html  l7.html  md22.html  metcalf.html  molecule3d.html  multixcqm9.html  nabladft.html  orbnet_denali.html  pcqm.html  proteinfragments.html  qm1b.html  qm7x.html  qmugs.html  qmx.html  revmd17.html  sn2_rxn.html  solvated_peptides.html  spice.html  splinter.html  tmqm.html  transition1x.html  vqm24.html  waterclusters.html  waterclusters3_30.html  x40.html
0.1.2/css/: custom.css
0.1.2/search/: search_index.json
0.1.2/tutorials/: usage.html
docs/: cli.md  contribute.md  data_storage.md  dataset_upload.md  datasets.md  e0s_and_qm.md  index.md  license.md  normalization_e0s.md  usage.md
docs/API/: available_datasets.md  basedataset.md  e0_dispatcher.md  formats.md  isolated_atom_energies.md  methods.md  properties.md  regressor.md  statistics.md  units.md  utils.md
docs/API/datasets/: 3bpa.md  alchemy.md  ani.md  comp6.md  des.md  gdml.md  geom.md  iso_17.md  l7.md  maceoff.md  md22.md  metcalf.md  molecule3d.md  multixcqm9.md  nabladft.md  orbnet_denali.md  pcqm.md  proteinfragments.md  qm1b.md  qm7x.md  qmugs.md  qmx.md  revmd17.md  sn2_rxn.md  solvated_peptides.md  spice.md  splinter.md  tmqm.md  transition1x.md  vqm24.md  waterclusters.md  waterclusters3_30.md  x40.md
docs/css/: custom-openqdc.css
docs/tutorials/: usage.ipynb
main/: 404.html  cli.html  contribute.html  data_storage.html  dataset_upload.html  datasets.html  index.html  licensing.html  normalization_e0s.html  objects.inv  sitemap.xml  usage.html
main/API/: basedataset.html  e0_dispatcher.html  formats.html  methods.html  properties.html  regressor.html  statistics.html  units.html  utils.html
main/API/datasets/: 3bpa.html  alchemy.html  ani.html  comp6.html  des.html  gdml.html  geom.html  iso_17.html  l7.html  maceoff.html  md22.html  metcalf.html  molecule3d.html  multixcqm9.html  nabladft.html  orbnet_denali.html  pcqm.html  proteinfragments.html  qm1b.html  qm7x.html  qmugs.html  qmx.html  revmd17.html  sn2_rxn.html  solvated_peptides.html  spice.html  splinter.html  tmqm.html  transition1x.html  vqm24.html  waterclusters.html  waterclusters3_30.html  x40.html
main/search/: search_index.json
main/tutorials/: usage.html
openqdc/: __init__.py  _version.py  cli.py
openqdc/datasets/: __init__.py  _mixin.py  _preprocess.py  _state.py  ani.py  base.py  combined.py  comp6.py  dataset_structure.py  des.py  dummy.py  energies.py  gdml.py  geom.py  hdf5.py  io.py  iso_17.py  molecule3d.py  nabladft.py  orbnet_denali.py  pcqm.py  properties.py  qm7x.py  qmugs.py  sn2_rxn.py  solvated_peptides.py  spice.py  statistics.py  structure.py  tmqm.py  transition1x.py  waterclusters3_30.py  xyz.py
openqdc/datasets/interaction/: L7.py  (+15 more)
openqdc/methods/: __init__.py  atom_energies.py  atom_energies.txt  enums.py
openqdc/raws/: __init__.py  config_factory.py  fetch.py  pubchemqc.py
openqdc/utils/: __init__.py  atomization_energies.py  constants.py  descriptors.py  download_api.py  exceptions.py  io.py  molecule.py  package_utils.py  paths.py  preprocess.py  regressor.py  units.py
src/openqdc/: __init__.py
stable/: 404.html  cli.html  contribute.html  data_storage.html  dataset_upload.html  datasets.html  index.html  licensing.html  normalization_e0s.html  sitemap.xml  usage.html
stable/API/: basedataset.html  e0_dispatcher.html  formats.html  methods.html  properties.html  regressor.html  statistics.html  units.html  utils.html
stable/css/: custom-openqdc.css
stable/tutorials/: usage.html
tests/: test_base.py  test_cli.py  test_dataset.py  test_descriptors.py  test_download.py  test_dummy.py  test_energies.py  test_filedataset.py  test_import.py  test_interaction.py  test_regressor.py
(+137 files in other folders)
