[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openqdc"
dynamic = ["version"]
description = "ML ready Quantum Mechanical datasets"
authors = [{ name = "Nikhil Shenoy", email = "nikhilshenoy98@gmail.com" },
          { name = "Prudencio Tossou", email = "tossouprudencio@gmail.com" },
          { name = "Cristian Gabellini", email = "cris.gabellini@gmail.com" }]
readme = "README.md"
license = { text = "CC BY-NC 4.0" }
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps.",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
  "tqdm" ,
  "pyyaml" ,
  "loguru" ,
  "fsspec <= 2023.12.2" ,
  "gcsfs" ,
  "typer" ,
  "prettytable" ,
  "pandas" ,
  "numpy" ,
  "datamol" ,
  "rdkit" ,
  "ase" ,
  "gdown",
  "h5py >= 3.8.0" ,
  "dscribe",
  "zarr",
  "python-dotenv",
  "s3fs",
  "httpx",
]


[project.optional-dependencies]
dev = [
  "pytest >= 6.0",
  "pytest-cov",
  "nbconvert",
  "black >= 24",
  "jupyterlab",
  "pre-commit",
  "ruff",
  "mkdocs",
  "mkdocs-material",
  "mkdocs-material-extensions",
  "mkdocstrings",
  "mkdocs-click",
  "mkdocs-jupyter",
  "markdown-include",
  "mdx_truly_sane_lists",
  "mkdocstrings-python",
]

[project.scripts]
openqdc = "openqdc.cli:app"

[project.urls]
Website = "https://openqdc.io"
"Source Code" = "https://github.com/valence-labs/openQDC"
"Bug Tracker" = "https://github.com/valence-labs/openQDC/issues"
Documentation = "https://docs.openqdc.io"

[tool.setuptools]
include-package-data = true

[tool.setuptools_scm]
fallback_version = "dev"

[tool.isort]
profile = "black"
src_paths = ["openqdc"]

[tool.setuptools.packages.find]
where = ["."]
include = ["openqdc", "openqdc.*"]
exclude = []
namespaces = true

[tool.setuptools.package-data]
"*" = ["*.txt"]

[tool.pylint.messages_control]
disable = [
  "no-member",
  "too-many-arguments",
  "too-few-public-methods",
  "no-else-return",
  "duplicate-code",
  "too-many-branches",
  "redefined-builtin",
  "dangerous-default-value",
]

[tool.pylint.format]
max-line-length = 120

[tool.black]
line-length = 120
target-version = ['py39', 'py310']
include = '\.pyi?$'

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-vv"
testpaths = ["tests"]
filterwarnings = []

[tool.coverage.run]
omit = ["setup.py", "tests/*"]

[tool.ruff]
line-length = 120
ignore = ["E731"]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F405", "F403", "F401"]
"**/config_factory.py" = ["E501"]
